Fix #31102: changing scene.use_color_management from render_pre callback would crash.